--- a/src/game/Ninger/ninger.conf
+++ b/src/game/Ninger/ninger.conf
@@ -1,5 +1,8 @@
 [ninger]
 
 Enable = 1
-AccountNamePrefix = ROBOT
+AccountNamePrefix = NINGER
 DPSDelay = 2000
+OnlineCheckDelay = 60000
+OfflineCheckDelay = 3600000
+NingerCountEachLevel = 20
